--- a/jglh/框架内容_13.html
+++ b/jglh/框架内容_13.html
@@ -56,7 +56,7 @@
 
             <!-- Unnamed (形状) -->
             <div id="u1" class="ax_形状">
-              <img id="u1_img" class="img " src="images/框架内容_13/u1.png"/>
+              <img id="u1_img" class="img " src="images/框架内容_2/u1.png"/>
               <!-- Unnamed () -->
               <div id="u2" class="text">
                 <p><span></span></p>
@@ -64,169 +64,127 @@
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u3" class="ax_形状">
-              <img id="u3_img" class="img " src="images/框架内容_2/u1.png"/>
+            <div id="u3" class="ax_h2">
+              <img id="u3_img" class="img " src="resources/images/transparent.gif"/>
               <!-- Unnamed () -->
               <div id="u4" class="text">
-                <p><span></span></p>
+                <p><span>我的活动</span></p>
               </div>
             </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u5" class="ax_h2">
-              <img id="u5_img" class="img " src="resources/images/transparent.gif"/>
+            <!-- Unnamed (图片) -->
+            <div id="u5" class="ax_图片">
+              <img id="u5_img" class="img " src="images/框架内容_2/u3.png"/>
               <!-- Unnamed () -->
               <div id="u6" class="text">
-                <p><span>功能设置</span></p>
+                <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (图片) -->
             <div id="u7" class="ax_图片">
-              <img id="u7_img" class="img " src="images/框架内容_2/u3.png"/>
+              <img id="u7_img" class="img " src="images/框架内容/u10.png"/>
               <!-- Unnamed () -->
               <div id="u8" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
-            <!-- Unnamed (图片) -->
-            <div id="u9" class="ax_图片">
-              <img id="u9_img" class="img " src="images/框架内容/u10.png"/>
+            <!-- Unnamed (形状) -->
+            <div id="u9" class="ax_形状">
+              <img id="u9_img" class="img " src="images/框架内容_13/u9.png"/>
               <!-- Unnamed () -->
               <div id="u10" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
-            <!-- button (形状) -->
-            <div id="u11" class="ax_形状" data-label="button">
-              <img id="u11_img" class="img " src="images/框架内容_13/button_u11.png"/>
-              <!-- Unnamed () -->
-              <div id="u12" class="text">
-                <p><span>登出</span></p>
-              </div>
-            </div>
+            <!-- 活动咨询 (动态面板) -->
+            <div id="u11" class="ax_动态面板" data-label="活动咨询">
+              <div id="u11_state0" class="panel_state" data-label="状态1">
+                <div id="u11_state0_content" class="panel_state_content">
 
-            <!-- Unnamed (形状) -->
-            <div id="u13" class="ax_形状">
-              <img id="u13_img" class="img " src="images/框架内容_13/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u14" class="text">
-                <p><span>&nbsp; </span><span>电台自动播放</span></p>
-              </div>
-            </div>
+                  <!-- Unnamed (形状) -->
+                  <div id="u12" class="ax_形状">
+                    <img id="u12_img" class="img " src="images/框架内容_9/u12.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u13" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
 
-            <!-- Unnamed (图片) -->
-            <div id="u15" class="ax_图片">
-              <img id="u15_img" class="img " src="images/框架内容_6/u16.png"/>
-              <!-- Unnamed () -->
-              <div id="u16" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
+                  <!-- Unnamed (形状) -->
+                  <div id="u14" class="ax_形状">
+                    <img id="u14_img" class="img " src="images/框架内容_9/u14.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u15" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u17" class="ax_形状">
-              <img id="u17_img" class="img " src="images/框架内容_13/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u18" class="text">
-                <p><span>&nbsp; </span><span>窝蜂数据播放</span></p>
-              </div>
-            </div>
+                  <!-- Unnamed (形状) -->
+                  <div id="u16" class="ax_文本">
+                    <img id="u16_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u17" class="text">
+                      <p><span>红花送不停，助力赢大奖</span></p>
+                    </div>
+                  </div>
 
-            <!-- Unnamed (图片) -->
-            <div id="u19" class="ax_图片">
-              <img id="u19_img" class="img " src="images/框架内容_6/u16.png"/>
-              <!-- Unnamed () -->
-              <div id="u20" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
+                  <!-- Unnamed (形状) -->
+                  <div id="u18" class="ax_文本">
+                    <img id="u18_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u19" class="text">
+                      <p><span>活动正文活动正文活动正文活动正文活动正文活动正文活动正文.......</span></p>
+                    </div>
+                  </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u21" class="ax_形状">
-              <img id="u21_img" class="img " src="images/框架内容_13/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u22" class="text">
-                <p><span>&nbsp; </span><span>当前缓存大小：</span><span>41.77M</span></p>
-              </div>
-            </div>
+                  <!-- Unnamed (形状) -->
+                  <div id="u20" class="ax_形状">
+                    <img id="u20_img" class="img " src="images/框架内容_9/u12.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u21" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u23" class="ax_形状">
-              <img id="u23_img" class="img " src="images/框架内容_13/u23.png"/>
-              <!-- Unnamed () -->
-              <div id="u24" class="text">
-                <p><span>清理</span></p>
-              </div>
-            </div>
+                  <!-- Unnamed (形状) -->
+                  <div id="u22" class="ax_形状">
+                    <img id="u22_img" class="img " src="images/框架内容_9/u14.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u23" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u25" class="ax_形状">
-              <img id="u25_img" class="img " src="images/框架内容_13/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u26" class="text">
-                <p><span>&nbsp; </span><span>离线地图</span></p>
-              </div>
-            </div>
+                  <!-- Unnamed (形状) -->
+                  <div id="u24" class="ax_文本">
+                    <img id="u24_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u25" class="text">
+                      <p><span>交通广播2015萌宝秀评选</span></p>
+                    </div>
+                  </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u27" class="ax_形状">
-              <img id="u27_img" class="img " src="images/框架内容_13/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u28" class="text">
-                <p><span>&nbsp; </span><span>安全设置</span></p>
-              </div>
-            </div>
+                  <!-- Unnamed (形状) -->
+                  <div id="u26" class="ax_文本">
+                    <img id="u26_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u27" class="text">
+                      <p><span>活动正文活动正文活动正文活动正文活动正文活动正文活动正文.......</span></p>
+                    </div>
+                  </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u29" class="ax_形状">
-              <img id="u29_img" class="img " src="images/框架内容_13/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u30" class="text">
-                <p><span>&nbsp; </span><span>使用帮助</span></p>
-              </div>
-            </div>
+                  <!-- Unnamed (Hot Spot) -->
+                  <div id="u28" class="ax_hot_spot">
+                  </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u31" class="ax_形状">
-              <img id="u31_img" class="img " src="images/框架内容_13/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u32" class="text">
-                <p><span>&nbsp; </span><span>意见反馈</span></p>
+                  <!-- Unnamed (Hot Spot) -->
+                  <div id="u29" class="ax_hot_spot">
+                  </div>
+                </div>
               </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u33" class="ax_图片">
-              <img id="u33_img" class="img " src="images/框架内容_13/u33.png"/>
-              <!-- Unnamed () -->
-              <div id="u34" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u35" class="ax_图片">
-              <img id="u35_img" class="img " src="images/框架内容_13/u33.png"/>
-              <!-- Unnamed () -->
-              <div id="u36" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (形状) -->
-            <div id="u37" class="ax_形状">
-              <img id="u37_img" class="img " src="images/框架内容_13/u13.png"/>
-              <!-- Unnamed () -->
-              <div id="u38" class="text">
-                <p><span>&nbsp; </span><span>关于我们</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (Hot Spot) -->
-            <div id="u39" class="ax_hot_spot">
             </div>
           </div>
         </div>
