--- a/jglh/框架内容_14.html
+++ b/jglh/框架内容_14.html
@@ -56,7 +56,7 @@
 
             <!-- Unnamed (形状) -->
             <div id="u1" class="ax_形状">
-              <img id="u1_img" class="img " src="images/框架内容_13/u1.png"/>
+              <img id="u1_img" class="img " src="images/框架内容_14/u1.png"/>
               <!-- Unnamed () -->
               <div id="u2" class="text">
                 <p><span></span></p>
@@ -99,12 +99,12 @@
               </div>
             </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u11" class="ax_形状">
-              <img id="u11_img" class="img " src="images/框架内容_14/u11.png"/>
+            <!-- button (形状) -->
+            <div id="u11" class="ax_形状" data-label="button">
+              <img id="u11_img" class="img " src="images/框架内容_14/button_u11.png"/>
               <!-- Unnamed () -->
               <div id="u12" class="text">
-                <p><span></span></p>
+                <p><span>登出</span></p>
               </div>
             </div>
 
@@ -113,69 +113,120 @@
               <img id="u13_img" class="img " src="images/框架内容_14/u13.png"/>
               <!-- Unnamed () -->
               <div id="u14" class="text">
-                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">LOGO</span></p>
+                <p><span>&nbsp; </span><span>电台自动播放</span></p>
               </div>
             </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u15" class="ax_文本">
-              <img id="u15_img" class="img " src="resources/images/transparent.gif"/>
+            <!-- Unnamed (图片) -->
+            <div id="u15" class="ax_图片">
+              <img id="u15_img" class="img " src="images/框架内容_6/u16.png"/>
               <!-- Unnamed () -->
               <div id="u16" class="text">
-                <p><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">交广领航</span><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;"> IOS </span><span style="font-family:'STHeitiSC-Light', 'Heiti SC Light', 'Heiti SC';font-weight:200;">客户端</span></p>
+                <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u17" class="ax_文本">
-              <img id="u17_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u17" class="ax_形状">
+              <img id="u17_img" class="img " src="images/框架内容_14/u13.png"/>
               <!-- Unnamed () -->
               <div id="u18" class="text">
-                <p><span>版本：v4.0</span></p>
+                <p><span>&nbsp; </span><span>窝蜂数据播放</span></p>
               </div>
             </div>
 
-            <!-- Unnamed (形状) -->
-            <div id="u19" class="ax_文本">
-              <img id="u19_img" class="img " src="resources/images/transparent.gif"/>
+            <!-- Unnamed (图片) -->
+            <div id="u19" class="ax_图片">
+              <img id="u19_img" class="img " src="images/框架内容_6/u16.png"/>
               <!-- Unnamed () -->
               <div id="u20" class="text">
-                <p><span>Copyright ©2015 JGRM. All Rights Reserved</span></p>
+                <p><span></span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
             <div id="u21" class="ax_形状">
-              <img id="u21_img" class="img " src="images/框架内容_14/u21.png"/>
+              <img id="u21_img" class="img " src="images/框架内容_14/u13.png"/>
               <!-- Unnamed () -->
               <div id="u22" class="text">
-                <p><span>官网</span></p>
+                <p><span>&nbsp; </span><span>当前缓存大小：</span><span>41.77M</span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
             <div id="u23" class="ax_形状">
-              <img id="u23_img" class="img " src="images/框架内容_14/u21.png"/>
+              <img id="u23_img" class="img " src="images/框架内容_14/u23.png"/>
               <!-- Unnamed () -->
               <div id="u24" class="text">
-                <p><span>微博</span></p>
+                <p><span>清理</span></p>
               </div>
-            </div>
-
-            <!-- Unnamed (垂直线) -->
-            <div id="u25" class="ax_垂直线">
-              <img id="u25_start" class="img " src="resources/images/transparent.gif" alt="u25_start"/>
-              <img id="u25_end" class="img " src="resources/images/transparent.gif" alt="u25_end"/>
-              <img id="u25_line" class="img " src="images/框架内容_14/u25_line.png" alt="u25_line"/>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u26" class="ax_文本">
-              <img id="u26_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u25" class="ax_形状">
+              <img id="u25_img" class="img " src="images/框架内容_14/u13.png"/>
               <!-- Unnamed () -->
-              <div id="u27" class="text">
-                <p><span>交广领航是河南交通广播与地图路况信息相结合的应用软件，集合了实时路况信息查询、路况分享、在线直播收听、在线互动交流、交广新闻资讯、交广活动等功能的新媒体平台。</span></p><p><span>&nbsp;</span></p><p><span>功能简介：</span></p><p><span>1、实时路况信息查询；</span></p><p><span>2、分享沿途路况；</span></p><p><span>3、在线收听直播节目；</span></p><p><span>4、实时资讯浏览与评论；</span></p><p><span>5、在线互动交流；</span></p><p><span>6、参与交广活动中大奖。</span></p>
+              <div id="u26" class="text">
+                <p><span>&nbsp; </span><span>离线地图</span></p>
               </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u27" class="ax_形状">
+              <img id="u27_img" class="img " src="images/框架内容_14/u13.png"/>
+              <!-- Unnamed () -->
+              <div id="u28" class="text">
+                <p><span>&nbsp; </span><span>安全设置</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u29" class="ax_形状">
+              <img id="u29_img" class="img " src="images/框架内容_14/u13.png"/>
+              <!-- Unnamed () -->
+              <div id="u30" class="text">
+                <p><span>&nbsp; </span><span>使用帮助</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u31" class="ax_形状">
+              <img id="u31_img" class="img " src="images/框架内容_14/u13.png"/>
+              <!-- Unnamed () -->
+              <div id="u32" class="text">
+                <p><span>&nbsp; </span><span>意见反馈</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u33" class="ax_图片">
+              <img id="u33_img" class="img " src="images/框架内容_14/u33.png"/>
+              <!-- Unnamed () -->
+              <div id="u34" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (图片) -->
+            <div id="u35" class="ax_图片">
+              <img id="u35_img" class="img " src="images/框架内容_14/u33.png"/>
+              <!-- Unnamed () -->
+              <div id="u36" class="text">
+                <p><span></span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u37" class="ax_形状">
+              <img id="u37_img" class="img " src="images/框架内容_14/u13.png"/>
+              <!-- Unnamed () -->
+              <div id="u38" class="text">
+                <p><span>&nbsp; </span><span>关于我们</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (Hot Spot) -->
+            <div id="u39" class="ax_hot_spot">
             </div>
           </div>
         </div>
