--- a/jglh/框架内容_7.html
+++ b/jglh/框架内容_7.html
@@ -56,171 +56,51 @@
 
             <!-- Unnamed (形状) -->
             <div id="u1" class="ax_形状">
-              <img id="u1_img" class="img " src="images/框架内容_2/u1.png"/>
+              <img id="u1_img" class="img " src="images/框架内容_6/u1.png"/>
               <!-- Unnamed () -->
               <div id="u2" class="text">
                 <p><span></span></p>
               </div>
             </div>
 
-            <!-- Unnamed (图片) -->
-            <div id="u3" class="ax_图片">
-              <img id="u3_img" class="img " src="images/框架内容/u10.png"/>
-              <!-- Unnamed () -->
-              <div id="u4" class="text">
-                <p><span></span></p>
-              </div>
-            </div>
-
-            <!-- 主持人 (动态面板) -->
-            <div id="u5" class="ax_动态面板" data-label="主持人">
-              <div id="u5_state0" class="panel_state" data-label="状态1">
-                <div id="u5_state0_content" class="panel_state_content">
+            <!-- 头部 (动态面板) -->
+            <div id="u3" class="ax_动态面板" data-label="头部">
+              <div id="u3_state0" class="panel_state" data-label="状态1">
+                <div id="u3_state0_content" class="panel_state_content">
 
                   <!-- Unnamed (形状) -->
-                  <div id="u6" class="ax_形状">
-                    <img id="u6_img" class="img " src="images/框架内容_4/u49.png"/>
+                  <div id="u4" class="ax_形状">
+                    <img id="u4_img" class="img " src="images/框架内容_6/u4.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u5" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (图片) -->
+                  <div id="u6" class="ax_图片">
+                    <img id="u6_img" class="img " src="images/框架内容/u10.png"/>
                     <!-- Unnamed () -->
                     <div id="u7" class="text">
-                      <p><span>主持人</span></p>
+                      <p><span></span></p>
                     </div>
                   </div>
 
-                  <!-- Unnamed (形状) -->
-                  <div id="u8" class="ax_形状">
-                    <img id="u8_img" class="img " src="images/框架内容_4/u49.png"/>
+                  <!-- paragraph (形状) -->
+                  <div id="u8" class="ax_文本" data-label="paragraph">
+                    <img id="u8_img" class="img " src="resources/images/transparent.gif"/>
                     <!-- Unnamed () -->
                     <div id="u9" class="text">
-                      <p><span>主持人</span></p>
+                      <p><span>新建闹钟</span></p>
                     </div>
                   </div>
 
-                  <!-- Unnamed (形状) -->
-                  <div id="u10" class="ax_形状">
-                    <img id="u10_img" class="img " src="images/框架内容_4/u49.png"/>
+                  <!-- Unnamed (图片) -->
+                  <div id="u10" class="ax_图片">
+                    <img id="u10_img" class="img " src="images/框架内容_2/u3.png"/>
                     <!-- Unnamed () -->
                     <div id="u11" class="text">
-                      <p><span>主持人</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u12" class="ax_文本">
-                    <img id="u12_img" class="img " src="resources/images/transparent.gif"/>
-                    <!-- Unnamed () -->
-                    <div id="u13" class="text">
-                      <p><span>谢晗</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u14" class="ax_文本">
-                    <img id="u14_img" class="img " src="resources/images/transparent.gif"/>
-                    <!-- Unnamed () -->
-                    <div id="u15" class="text">
-                      <p><span>张冉</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u16" class="ax_文本">
-                    <img id="u16_img" class="img " src="resources/images/transparent.gif"/>
-                    <!-- Unnamed () -->
-                    <div id="u17" class="text">
-                      <p><span>丁适</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u18" class="ax_形状">
-                    <img id="u18_img" class="img " src="images/框架内容_4/u61.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u19" class="text">
-                      <p><span>点击头像给你喜欢的主持人送花吧</span></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!-- 聊天互动 (动态面板) -->
-            <div id="u20" class="ax_动态面板" data-label="聊天互动">
-              <div id="u20_state0" class="panel_state" data-label="状态3">
-                <div id="u20_state0_content" class="panel_state_content">
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u21" class="ax_形状">
-                    <img id="u21_img" class="img " src="images/框架内容_7/u21.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u22" class="text">
-                      <p><span>语音</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u23" class="ax_形状">
-                    <img id="u23_img" class="img " src="images/框架内容_7/u23.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u24" class="text">
-                      <p><span>输入文字信息</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u25" class="ax_形状">
-                    <img id="u25_img" class="img " src="images/框架内容_7/u21.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u26" class="text">
-                      <p><span>表情</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u27" class="ax_形状">
-                    <img id="u27_img" class="img " src="images/框架内容_7/u21.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u28" class="text">
-                      <p><span>+</span></p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div id="u20_state1" class="panel_state" data-label="状态2">
-                <div id="u20_state1_content" class="panel_state_content">
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u29" class="ax_形状">
-                    <img id="u29_img" class="img " src="images/框架内容_7/u21.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u30" class="text">
-                      <p><span>键盘</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u31" class="ax_形状">
-                    <img id="u31_img" class="img " src="images/框架内容_7/u23.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u32" class="text">
-                      <p><span>按住说话</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u33" class="ax_形状">
-                    <img id="u33_img" class="img " src="images/框架内容_7/u21.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u34" class="text">
-                      <p><span>表情</span></p>
-                    </div>
-                  </div>
-
-                  <!-- Unnamed (形状) -->
-                  <div id="u35" class="ax_形状">
-                    <img id="u35_img" class="img " src="images/框架内容_7/u21.png"/>
-                    <!-- Unnamed () -->
-                    <div id="u36" class="text">
-                      <p><span>+</span></p>
+                      <p><span></span></p>
                     </div>
                   </div>
                 </div>
@@ -228,29 +108,137 @@
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u37" class="ax_h2">
-              <img id="u37_img" class="img " src="resources/images/transparent.gif"/>
+            <div id="u12" class="ax_形状">
+              <img id="u12_img" class="img " src="images/框架内容_5/u21.png"/>
               <!-- Unnamed () -->
-              <div id="u38" class="text">
-                <p><span>直播互动</span></p>
-              </div>
-            </div>
-
-            <!-- Unnamed (图片) -->
-            <div id="u39" class="ax_图片">
-              <img id="u39_img" class="img " src="images/框架内容_2/u3.png"/>
-              <!-- Unnamed () -->
-              <div id="u40" class="text">
-                <p><span></span></p>
+              <div id="u13" class="text">
+                <p><span>保存</span></p>
               </div>
             </div>
 
             <!-- Unnamed (形状) -->
-            <div id="u41" class="ax_形状">
-              <img id="u41_img" class="img " src="images/框架内容_7/u21.png"/>
+            <div id="u14" class="ax_形状">
+              <img id="u14_img" class="img " src="images/框架内容_6/u14.png"/>
               <!-- Unnamed () -->
-              <div id="u42" class="text">
-                <p><span>送花</span></p>
+              <div id="u15" class="text">
+                <p><span>闹钟声音：</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u16" class="ax_形状">
+              <img id="u16_img" class="img " src="images/框架内容_6/u14.png"/>
+              <!-- Unnamed () -->
+              <div id="u17" class="text">
+                <p><span>重复方式：</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u18" class="ax_文本">
+              <img id="u18_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u19" class="text">
+                <p><span>默认铃声&gt;</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u20" class="ax_文本">
+              <img id="u20_img" class="img " src="resources/images/transparent.gif"/>
+              <!-- Unnamed () -->
+              <div id="u21" class="text">
+                <p><span>工作日</span><span>&gt;</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u22" class="ax_形状">
+              <img id="u22_img" class="img " src="images/框架内容_7/u22.png"/>
+              <!-- Unnamed () -->
+              <div id="u23" class="text">
+                <p><span>07&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u24" class="ax_形状">
+              <img id="u24_img" class="img " src="images/框架内容_7/u24.png"/>
+              <!-- Unnamed () -->
+              <div id="u25" class="text">
+                <p><span>00</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u26" class="ax_形状">
+              <img id="u26_img" class="img " src="images/框架内容_7/u26.png"/>
+              <!-- Unnamed () -->
+              <div id="u27" class="text">
+                <p><span>08&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u28" class="ax_形状">
+              <img id="u28_img" class="img " src="images/框架内容_7/u26.png"/>
+              <!-- Unnamed () -->
+              <div id="u29" class="text">
+                <p><span>01</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u30" class="ax_形状">
+              <img id="u30_img" class="img " src="images/框架内容_7/u26.png"/>
+              <!-- Unnamed () -->
+              <div id="u31" class="text">
+                <p><span>06&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u32" class="ax_形状">
+              <img id="u32_img" class="img " src="images/框架内容_7/u26.png"/>
+              <!-- Unnamed () -->
+              <div id="u33" class="text">
+                <p><span>59</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u34" class="ax_形状">
+              <img id="u34_img" class="img " src="images/框架内容_7/u34.png"/>
+              <!-- Unnamed () -->
+              <div id="u35" class="text">
+                <p><span>05&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u36" class="ax_形状">
+              <img id="u36_img" class="img " src="images/框架内容_7/u34.png"/>
+              <!-- Unnamed () -->
+              <div id="u37" class="text">
+                <p><span>58</span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u38" class="ax_形状">
+              <img id="u38_img" class="img " src="images/框架内容_7/u34.png"/>
+              <!-- Unnamed () -->
+              <div id="u39" class="text">
+                <p><span>09&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </span></p>
+              </div>
+            </div>
+
+            <!-- Unnamed (形状) -->
+            <div id="u40" class="ax_形状">
+              <img id="u40_img" class="img " src="images/框架内容_7/u34.png"/>
+              <!-- Unnamed () -->
+              <div id="u41" class="text">
+                <p><span>02</span></p>
               </div>
             </div>
           </div>
