--- a/demo/jglh/框架内容_11.html
+++ b/demo/jglh/框架内容_11.html
@@ -327,6 +327,79 @@
                 <p><span>活动标题活动标题活动标题活动标题</span></p>
               </div>
             </div>
+
+            <!-- Unnamed (底部导航) -->
+
+            <!-- 底部导航 (动态面板) -->
+            <div id="u62" class="ax_动态面板" data-label="底部导航">
+              <div id="u62_state0" class="panel_state" data-label="状态1">
+                <div id="u62_state0_content" class="panel_state_content">
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u63" class="ax_形状">
+                    <img id="u63_img" class="img " src="images/框架内容/u35.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u64" class="text">
+                      <p><span></span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u65" class="ax_形状">
+                    <img id="u65_img" class="img " src="images/框架内容/u37.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u66" class="text">
+                      <p><span>ico</span></p>
+                    </div>
+                  </div>
+
+                  <!-- paragraph (形状) -->
+                  <div id="u67" class="ax_文本" data-label="paragraph">
+                    <img id="u67_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u68" class="text">
+                      <p><span>路况</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u69" class="ax_形状">
+                    <img id="u69_img" class="img " src="images/框架内容/u37.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u70" class="text">
+                      <p><span>ico</span></p>
+                    </div>
+                  </div>
+
+                  <!-- paragraph (形状) -->
+                  <div id="u71" class="ax_文本" data-label="paragraph">
+                    <img id="u71_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u72" class="text">
+                      <p><span>直播</span></p>
+                    </div>
+                  </div>
+
+                  <!-- Unnamed (形状) -->
+                  <div id="u73" class="ax_形状">
+                    <img id="u73_img" class="img " src="images/框架内容/u37.png"/>
+                    <!-- Unnamed () -->
+                    <div id="u74" class="text">
+                      <p><span>ico</span></p>
+                    </div>
+                  </div>
+
+                  <!-- paragraph (形状) -->
+                  <div id="u75" class="ax_文本" data-label="paragraph">
+                    <img id="u75_img" class="img " src="resources/images/transparent.gif"/>
+                    <!-- Unnamed () -->
+                    <div id="u76" class="text">
+                      <p><span>发现</span></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
