--- a/index.html
+++ b/index.html
@@ -25,21 +25,30 @@
         </ul>
       </header>
       <section>
-        <h2>
-<a id="原型综合浏览页" class="anchor" href="#%E5%8E%9F%E5%9E%8B%E7%BB%BC%E5%90%88%E6%B5%8F%E8%A7%88%E9%A1%B5" aria-hidden="true"><span class="octicon octicon-link"></span></a>原型综合浏览页</h2>
+        <h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p>田字格项目原型集纳展示页，本页固定地址：<a href="http://demo.7isker.com">http://demo.7isker.com</a></p>
+<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
 <h3>
-<a id="交广领航app" class="anchor" href="#%E4%BA%A4%E5%B9%BF%E9%A2%86%E8%88%AAapp" aria-hidden="true"><span class="octicon octicon-link"></span></a>交广领航APP</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
 
-<p>名称 | 原型链接 | 描述 | 备注
-----|------|----
-4.0版本 | <a href="http://lisker.github.io/demo/jglh/start.html">v20150422</a>  | 路况导航、直播互动 | 2015.06.09 更新</p>
+<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
 
-<p>名称 | 原型链接 | 描述 | 备注
-----|------|----
-萌宝秀活动 | <a href="http://lisker.github.io/demo/mbx/start.html">v20150422</a>  | 个人中心更新| 2015.05.12 更新</p>
+<h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+
+<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+
+<h3>
+<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+
+<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+
+<h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+
+<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
     </div>
     <footer>
